--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,31 +2,10 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
-.border {
-  border: 1px solid #dee2e6!important;
-  border-top-color: rgb(222, 226, 230) !important;
-  border-top-style: solid !important;
-  border-top-width: 1px !important;
-  border-right-color: rgb(222, 226, 230) !important;
-  border-right-style: solid !important;
-  border-right-width: 1px !important;
-  border-bottom-color: rgb(222, 226, 230) !important;
-  border-bottom-style: solid !important;
-  border-bottom-width: 1px !important;
-  border-left-color: rgb(222, 226, 230) !important;
-  border-left-style: solid !important;
-  border-left-width: 1px !important;
-  border-image-source: initial !important;
-  border-image-slice: initial !important;
-  border-image-width: initial !important;
-  border-image-outset: initial !important;
-  border-image-repeat: initial !important;
+th,
+td {
+  padding: 10px;
 }
-
-.rounded {
-  border-radius: .25rem!important;
-}
-
 
 .pl-150 {
   padding-left: 150px;
@@ -85,7 +64,7 @@ body {
 }
 
 .login-user .left {
-  background-color: #4D1CAB;
+  background-color: #0c50b4;
   width: 50%;
   min-height: 695px;
   text-align: center;
@@ -148,7 +127,7 @@ body {
 
 .pricing {
   margin-top: 100px;
-  background: #4D1DAB;
+  background: #0c50b4;
   padding-top: 70px;
   max-height: 620px;
 }
@@ -160,7 +139,7 @@ body {
 .pricing .support {
   font-size: 16px;
   font-weight: 400;
-  color: #CBB0FF;
+  color: #eeeaf7;
   line-height: 30px;
   margin-top: 30px;
 }
