fix routing mentor, view list mentor, fix model checkout & db

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -204,7 +204,7 @@ td {
   margin-top: 30px;
 }
 
-.btn-master, .btn-thirdty, .btn-primary, .btn-secondary, .btn-success {
+.btn-master, .btn-thirdty, .btn-primary, .btn-secondary, .btn-success, .btn-danger {
   padding: 11px 36px 11px 36px;
   border-radius: 100px;
   border: 0;
