--- a/public/css/main.css
+++ b/public/css/main.css
@@ -320,7 +320,7 @@ td {
   border: 1px solid #fff;
 }
 
-.basic-form input {
+.basic-form input, .basic-form select {
   border: 1px solid #E7E5F4;
   border-radius: 50px;
   padding: 12px 20px 12px 20px;
