add smooth scrolling & fixed top navbar

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,16 @@
+html {
+  scroll-behavior: smooth;  
+}
 body {
   font-family: 'Poppins', sans-serif;
 }
-
 th,
 td {
   padding: 10px;
+}
+
+nav {
+  background-color: #fcfcfc;
 }
 
 .pl-150 {
